# internal/server/routes.go
@@ -9,5 +9,9 @@ func (s *Server) RegisterRoutes(route *gin.Engine) {
 		v1.GET("/hello", helloHandler)
 		v1.GET("/user", fetchUser)
 		v1.GET("/user/:id", getUserByID)
+
+		v1.GET("/weather/:city", getWeatherByCity)
+
+		v1.GET("/agify/:name", getAgify)
 	}
 }
